# ConvenienceScripts

./: .gitignore  LICENSE  README.md  bitrate_estimator.py  blacommand  blacommand.ps1  checkfiles.py  fact_mcp.py  install-blacommand.ps1  install-blacommand.sh  listing_generator.py  rsml_statistics.py  set_vscode_defaults.py  wifi.py
viewpro/: main.py  plan.md  project_manager.py  projects.json  pyproject.toml  qt_compat.py  run.py  setup.py
viewpro/ui/: main_window.py
viewpro/viewpro/: __init__.py  main.py  project_manager.py  projects.json  qt_compat.py
viewpro/viewpro/storage/: json_store.py
viewpro/viewpro/ui/: main_window.py
